Expandable View Implimentation

--- a/app/src/main/res/layout/afterlistclick.xml
+++ b/app/src/main/res/layout/afterlistclick.xml
@@ -104,7 +104,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:textAppearanceMedium"
-                    android:text="Location" />
+                    android:text="Location"
+                    android:layout_margin="5dp" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
@@ -126,9 +127,12 @@
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="#a6a6a6"
+                    android:layout_toEndOf="@+id/imageView_work"
+                    android:layout_marginBottom="5dp"
                     android:layout_below="@+id/textView_home_profile"
-                    android:layout_toRightOf="@+id/imageView_work"
-                    android:layout_toEndOf="@+id/imageView_work" />
+                    android:layout_alignLeft="@+id/textView_home_profile"
+                    android:layout_alignStart="@+id/textView_home_profile"
+                    android:layout_marginTop="5dp" />
 
                 <ImageView
                     android:layout_width="16dp"
@@ -159,8 +163,7 @@
                     android:layout_below="@+id/textView_home_profile"
                     android:layout_toRightOf="@+id/imageView_work"
                     android:layout_toEndOf="@+id/imageView_work"
-                    android:layout_margin="5dp"
-                     />
+                    android:layout_margin="10dp" />
 
 
 
@@ -213,14 +216,18 @@
                     android:layout_toRightOf="@+id/imageView_fb"
                     android:layout_toEndOf="@+id/imageView_fb"
                     android:layout_marginTop="5dp"
-                    android:layout_marginLeft="5dp" />
+                    android:layout_marginLeft="5dp"
+                    android:layout_margin="10dp" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="#a6a6a6"
-                    android:layout_below="@+id/textView_twlink"
-                    android:layout_toRightOf="@+id/imageView_in"
-                    android:layout_toEndOf="@+id/imageView_in" />
+                    android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/imageView_fb"
+                    android:layout_alignLeft="@+id/textView_twlink"
+                    android:layout_alignStart="@+id/textView_twlink"
+                    android:layout_marginTop="5dp" />
 
 
                 <TextView
@@ -229,17 +236,18 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="email"
                     android:id="@+id/textView_email"
-                    android:layout_below="@+id/imageView_fb"
+                    android:layout_below="@+id/textView_twlink"
                     android:layout_alignLeft="@+id/textView_twlink"
-                    android:layout_alignStart="@+id/textView_twlink"
-                    android:layout_marginTop="5dp" />
+                    android:layout_alignStart="@+id/textView_twlink" />
                 <View
                     android:layout_width="match_parent"
                     android:layout_height="1px"
                     android:background="#a6a6a6"
+                    android:layout_toEndOf="@+id/imageView_in"
                     android:layout_below="@+id/textView_email"
-                    android:layout_toRightOf="@+id/imageView_in"
-                    android:layout_toEndOf="@+id/imageView_in" />
+                    android:layout_alignLeft="@+id/textView_email"
+                    android:layout_alignStart="@+id/textView_email"
+                    android:layout_marginTop="5dp" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -247,11 +255,10 @@
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="Phone"
                     android:id="@+id/textView_contact"
-                    android:layout_below="@+id/imageView_in"
+                    android:layout_below="@+id/textView_email"
                     android:layout_alignLeft="@+id/textView_email"
                     android:layout_alignStart="@+id/textView_email"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginBottom="5dp"/>
+                    android:layout_marginTop="10dp" />
 
 
 
