--- a/app/src/main/res/layout/fragment_one.xml
+++ b/app/src/main/res/layout/fragment_one.xml
@@ -15,6 +15,7 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_marginLeft="0dp"
+        android:fastScrollEnabled="true"
         android:divider="@drawable/divider"
         android:layout_marginRight="0dp"
         android:layout_marginBottom="0dp" />
