--- a/app/src/main/res/layout/post_job.xml
+++ b/app/src/main/res/layout/post_job.xml
@@ -174,7 +174,7 @@
                     android:text="https://twitter.com/"
                     android:id="@+id/textView_twlink"
                     android:singleLine="true"
-                    android:background="@drawable/line"
+
                     android:layout_below="@+id/textView_fblink2"
                     android:layout_toRightOf="@+id/imageView_fb"
                     android:layout_toEndOf="@+id/imageView_fb"
@@ -189,7 +189,7 @@
                     android:singleLine="true"
                     android:inputType="textEmailAddress"
                     android:id="@+id/textView_email"
-                    android:background="@drawable/line"
+
                     android:layout_below="@+id/textView_twlink"
                     android:layout_alignLeft="@+id/textView_twlink"
                     android:layout_alignStart="@+id/textView_twlink"
@@ -201,7 +201,7 @@
                     android:singleLine="true"
                     android:hint="Contact"
                     android:inputType="phone"
-                    android:background="@drawable/line"
+
                     android:id="@+id/textView_contact"
                     android:layout_below="@+id/textView_email"
                     android:layout_toRightOf="@+id/imageView_fb"
@@ -219,7 +219,8 @@
                     android:src="@drawable/tw"
                     android:layout_alignTop="@+id/textView_twlink"
                     android:layout_alignLeft="@+id/textView_fblink2"
-                    android:layout_alignStart="@+id/textView_fblink2" />
+                    android:layout_alignStart="@+id/textView_fblink2"
+                    android:layout_marginTop="10dp" />
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -227,7 +228,8 @@
                     android:src="@drawable/ph"
                     android:layout_alignTop="@+id/textView_contact"
                     android:layout_toLeftOf="@+id/textView_contact"
-                    android:layout_toStartOf="@+id/textView_contact" />
+                    android:layout_toStartOf="@+id/textView_contact"
+                    android:layout_marginTop="10dp" />
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
@@ -235,40 +237,41 @@
                     android:src="@drawable/mail"
                     android:layout_alignTop="@+id/textView_email"
                     android:layout_alignParentLeft="true"
-                    android:layout_alignParentStart="true" />
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="10dp" />
 
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:id="@+id/imageView3"
-                    android:layout_marginTop="10dp"
                     android:src="@drawable/website"
-                    android:layout_below="@+id/imageView_tw"
-                    android:layout_toLeftOf="@+id/textView_contact"
-                    android:layout_toStartOf="@+id/textView_contact" />
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_below="@+id/textView_contact"
+                    android:layout_marginTop="10dp" />
 
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/editText2"
-                    android:layout_marginTop="5dp"
-                    android:layout_below="@+id/imageView_tw"
+                    android:text="www."
+                    android:layout_below="@id/textView_contact"
+                    android:layout_alignParentBottom="true"
                     android:layout_alignLeft="@+id/textView_contact"
-                    android:layout_alignStart="@+id/textView_contact"
-                    android:text="www." />
+                    android:layout_alignStart="@+id/textView_contact" />
             </RelativeLayout>
         </android.support.v7.widget.CardView>
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_below="@+id/card_view_contact"
-            android:layout_height="wrap_content">
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/button_send_jobpost"
-                style="@style/Base.Widget.AppCompat.Button.Borderless"
-                android:text="Send to Database"/>
-        </android.support.v7.widget.CardView>
+        <!--<android.support.v7.widget.CardView-->
+            <!--android:layout_width="match_parent"-->
+            <!--android:layout_below="@+id/card_view_contact"-->
+            <!--android:layout_height="wrap_content">-->
+            <!--<Button-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="wrap_content"-->
+                <!--android:id="@+id/button_send_jobpost"-->
+                <!--style="@style/Base.Widget.AppCompat.Button.Borderless"-->
+                <!--android:text="Send to Database"/>-->
+        <!--</android.support.v7.widget.CardView>-->
 
 
 
