--- a/app/src/main/res/layout/simple_list_item_job.xml
+++ b/app/src/main/res/layout/simple_list_item_job.xml
@@ -77,7 +77,8 @@
         android:id="@+id/textView5"
         android:layout_alignBottom="@+id/imageView4"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textView2" />
 
     <TextView
         android:layout_width="wrap_content"
