--- a/app/src/main/res/layout/edit_profile.xml
+++ b/app/src/main/res/layout/edit_profile.xml
@@ -212,8 +212,8 @@
                     android:textAppearance="?android:textAppearanceMedium"
                     android:id="@+id/ediText_home"
                     android:layout_below="@+id/info_text"
-                    android:layout_alignLeft="@+id/textView_location_profile"
-                    android:layout_alignStart="@+id/textView_location_profile"
+                    android:layout_alignLeft="@+id/editText_location"
+                    android:layout_alignStart="@+id/editText_location"
                     android:layout_marginTop="5dp" />
 
                 <ImageView
@@ -222,7 +222,7 @@
                     android:id="@+id/imageView_work"
                     android:src="@drawable/work"
                     android:padding="0dp"
-                    android:layout_alignTop="@+id/textView_location_profile"
+                    android:layout_alignTop="@+id/editText_location"
                     android:layout_alignParentLeft="true"
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="10dp" />
@@ -240,7 +240,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:id="@+id/textView_location_profile"
+                    android:id="@+id/editText_location"
                     android:layout_below="@+id/ediText_home"
                     android:layout_toRightOf="@+id/imageView_work"
                     android:layout_toEndOf="@+id/imageView_work"
